--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,20 +11,20 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v1
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
+      - uses: actions/checkout@v3
+      - name: Set up JDK 18
+        uses: actions/setup-java@v3
         with:
-          java-version: 11
+          java-version: 18
 
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
 
       - name: build
         run: |
-          ./gradlew assembleRelease
-      - name: Upload test results
-        uses: actions/upload-artifact@v1
+          ./gradlew publishRelease --track=production
+      - name: Upload apk
+        uses: actions/upload-artifact@v3
         with:
-          name: junit-results
-          path: junit
+          name: 2.3.0-beta3
+          path: /app/build/outputs/apk/
