--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,7 +18,12 @@ jobs:
           distribution: 'temurin'
           java-version: '18'
           cache: 'gradle'
-
+      - uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.1.1
+      - uses: fwilhe2/setup-kotlin@main
+        with:
+          version: 1.8.20
       - name: Setup Android SDK
         uses: android-actions/setup-android@v2
 
